# 3D-Snowman-game-OPENGL

./: 20211208_090508.ppm  20211208_111754.ppm  20220106_150617.ppm  CMakeLists.txt  README.md  gui.frag  gui.vert  shader.frag  shader.vert
data/: fontB.tga  mario.tga  skateboard.mtl  snow.tga  snowman.obj1  snowman_skate.mtl
src/: declaration.h  main.cpp
